--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,13 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.color-option {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+/* .palette {
+  width:200px;
+
+} */
