--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,80 @@
+@import "reset.css";
+
+body {
+  display: flex;
+  gap:20px;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: gainsboro;
+  padding:20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
 canvas {
   width: 800px;
   height: 800px;
-  border: 5px solid black;
+  background-color: white;;
+  border-radius: 15px;
 }
 
 body {
   display: flex;
-  justify-content: center;
+  justify-self: center;
   align-items: center;
 }
 
+.btns {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.color-options {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
 .color-option {
   width: 50px;
   height: 50px;
+  border-radius: 50%;
   cursor: pointer;
+  border: 5px solid white;
+  transition: transform ease-in-out .3s;
+}
+.color-option:hover {
+  transform: scale(1.2);
+}
+input#color {
+  background-color: white;
+}
+button, label {
+  all: unset; /* css 속성 전부 제거 */
+  padding: 10px 0px;
+  text-align: center;
+  background-color: royalblue;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: opacity linear .1s;
+}
+
+button:hover {
+  opacity: 0.75;
+}
+
+input#file {
+  display: none;
+}
+
+input#text {
+  all: unset; /* css 속성 전부 제거 */
+  padding: 10px 0px;
+  text-align: center;
+  border-radius: 10px;
+  font-weight: 500;
+  background-color: white;
 }
 /* .palette {
   width:200px;
